# YF_software_architecture_learning

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  Singleton  Singleton.cpp
src/log/: CMakeLists.txt  log.cpp  log.h  log_test.cpp
src/protobuf/: CMakeLists.txt  test.proto  testProto.cpp
src/tips/: HttpQuery.cpp  PFUnix_client.cpp  PFUnix_server.cpp  count_if.cpp  cv_blind_effect.cpp  cvaddWeight.cpp  execution_par.cpp  for_each.cpp  inf  inf.cpp  memory.cpp  numbers.cpp  once_flags.cpp  shared_ptr.cpp  shm.cpp  sizeof.cpp  span.cpp  string_view.cpp  syncFile.cpp  trans.cpp  transform_reduce.cpp  union.cpp  unique_ptr.cpp  vortexEffect.cpp
